--- a/apps/travel/templates/travel/index.html
+++ b/apps/travel/templates/travel/index.html
@@ -2,51 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>travel</title>
+    <title>Travel Buddy</title>
 </head>
 <body>
+    <h1>Hello, {{ request.session.user.name }}</h1>
     <a href="{% url 'login:logout' %}">Logout</a>
-   <h1>Hello {{ request.session.user.name }}!</h1>
-    <h3>Your Trip Schedules</h3>
+    <h3>Your Trip Schedules: </h3>
     <table>
         <tr>
             <th>Destination</th>
-            <th>Travel Start Date</th>
-            <th>Travel End Date</th>
+            <th>Start Date</th>
+            <th>End Date</th>
             <th>Plan</th>
         </tr>
-        {% for travel in travel %}
-            <tr>
-                <td><a href="{% url 'travel:show' travel.id %}">{{travel.destination}}</a></td>
-                <td>{{travel.travel_date_from}}</td>
-                <td>{{travel.travel_date_to}}</td>
-                <td>{{travel.description}}</td>
-            </tr>
+        {% for travel in user_travels %}
+        <tr>
+            <td><a href="{% url 'travel:show' travel.id %}">{{ travel.destination }}</a></td>
+            <td>{{ travel.travel_date_from }}</td>
+            <td>{{ travel.travel_date_to }}</td>
+            <td>{{ travel.description }}</td>
+        </tr>
+        {% endfor %}
+        {% for travel in joined_travels %}
+        <tr>
+            <td><a href="{% url 'travel:show' travel.id %}">{{ travel.destination }}</a></td>
+            <td>{{ travel.travel_date_from }}</td>
+            <td>{{ travel.travel_date_to }}</td>
+            <td>{{ travel.description }}</td>
+        </tr>
         {% endfor %}
     </table>
-    <h3>Other User's Travel Plans</h3>
-     <table>
+    <h3>Other User's Travel Plans: </h3>
+    <table>
         <tr>
             <th>Name</th>
             <th>Destination</th>
             <th>Travel Start Date</th>
             <th>Travel End Date</th>
-            <th>Do You Want to Join</th>
+            <th>Do you want to join?</th>
         </tr>
-        {% for travel in travel %}
-            <tr>
-                <td>{{travel.users.name}}</td>
-                <td><a href="{% url 'travel:show' travel.id %}">{{travel.destination}}</a></td>
-                <td>{{travel.travel_date_from}}</td>
-                <td>{{travel.travel_date_to}}</td>
-                <td><form action="'url travel:join' method='post'>
-                    {% csrf_token %}
-                    <input type="hidden" name='travel_id' value='{{travel.id}}'>
-                    <input type='submit' value='Join'>
-                </form></td>
-            </tr>
+        {% for travel in all_travels %}
+        <tr>
+            <td>{{ travel.solo_trip.name }}</td>
+            <td><a href="{% url 'travel:show' travel.id %}">{{ travel.destination }}</a></td>
+            <td>{{ travel.travel_date_from }}</td>
+            <td>{{ travel.travel_date_to }}</td>
+            {% if request.session.user.user_id != travel.solo_trip.id %}
+            <td><a href="{% url 'travel:join_trip' travel.id %}">Join</a></td>
+            {% endif %}
+        </tr>
         {% endfor %}
     </table>
-    <a href="{% url 'travel:add_trip' %}">Add Travel Plan</a>
+    <p><a href="{% url 'travel:add_travel' %}">Add Travel Plan</a></p>
 </body>
 </html>
