--- a/apps/travel/templates/travel/show.html
+++ b/apps/travel/templates/travel/show.html
@@ -8,13 +8,13 @@
     <a href="{% url 'travel:index' %}">Home</a>
     <a href="{% url 'login:logout' %}">Logout</a>
     <h1>{{travel.destination}}</h1>
-    <p>Planned By: {{user.name}}</p>
+    <p>Planned By: {{travel.solo_trip.name}}</p>
     <p>Description: {{travel.description}}</p>
     <p>Travel Date From: {{travel.travel_date_from}}</p>
     <p>Travel Date To: {{travel.travel_date_to}}</p>
     <h3>Other users joining the trip</h3>
     <ul>
-        {% for user in users %}
+        {% for user in joining %}
           <li>{{user.name}}</li>
         {% endfor %}
     </ul>
